--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <img src="https://avatars1.githubusercontent.com/u/2007630?v=3&s=200" alt="profile">
-                <hr>
                 <h1 id="homeHeading">Rajjan Jeyaram Sangiah</h1>
                 <hr>
-                <p>Full Stack Developer</p>
+                <p>Full Stack .Net Developer</p>
                 <hr class="intro-divider">
                 <ul class="list-inline intro-social-buttons">
                     <li>
