--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="rajjan">
     <meta name="keywords" content="rajjan, jeyaram, sangiah">
-
+    <meta name="google-site-verification" content="e910J2zVudtNOoQ4aUDAFUlhKWnzYI-ZS1lKMwnpnZU" />
     <title>Rajjan</title>
 
     <!-- Bootstrap Core CSS -->
